# locallens

./: .gitignore  CMakeLists.txt  Makefile  README.md  SECURITY.md
.github/workflows/: ci.yml
docs/: architecture.md  install.md  network-contract.md  operations.md  threat-model.md
docs/adr/: README.md
docs/evidence/: import-integrity.md  release-readiness.md
packaging/systemd/: locallens-backup.service  locallens-backup.timer  locallens.service
src/: main.cpp
tests/: run-fixtures.sh  validate-json.py
